--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
             document.write(a + "<br />");   // выведет 13
 
         </script>
+
+        <!--
+
+        Оператор неравенства "!=" возвращает противоположное значение оператора равенства.
+        Оператор неидентичности "!==" возвращает противоположное значение оператора идентичности.
+        
+        -->
+
+    <script type="text/javascript">
+
+            var a = 1;                  // простое число
+            var b = "1";                // число как строка
+            var c = "some";             // строка            
+            var d = 'same';             // строка
+            var e = true;               // логическое "истина"
+            var res;
+
+            res = a != b;
+            document.write("a не равно b : " + res + "<br />");
+
+            res = c !== d;
+            document.write("c не идентично d : " + res + "<br />");
+
+            res = a !== e;
+            document.write("a не идентично e : " + res + "<br />");
+
+        </script>
+
     </pre>
     <script src="main.js"></script>
 </body>
